--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 cytoolz==0.12.2
 Django==3.2.23
+django-cors-headers==4.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
