--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ protobuf==4.24.4
 pycryptodome==3.19.0
 PyJWT==2.8.0
 pyrsistent==0.19.3
+python-dotenv==0.21.1
 pytz==2023.3.post1
 pyunormalize==15.1.0
 PyYAML==6.0.1
